# projective_discharging

./: .gitignore  CMakeLists.txt  LICENSE  README.md  basewheel.cpp  basewheel.hpp  cartwheel.cpp  cartwheel.hpp  charge_result.sh  configuration.cpp  configuration.hpp  discharge.sh  enum_send.sh  enum_wheel.sh  main.cpp  near_triangulation.cpp  near_triangulation.hpp  rule.cpp  rule.hpp  send.cpp
proj_send/: from5to7+_00000.rule  from5to7+_00001.rule  from5to7+_00002.rule  from5to7+_00003.rule  from5to7+_00004.rule  from5to7+_00005.rule  from5to7+_00006.rule  from5to7+_00007.rule  from5to7+_00008.rule  from5to7+_00009.rule  from5to7+_00010.rule  from5to7+_00011.rule  from5to7+_00012.rule  from5to7+_00013.rule  from6to7+_00000.rule  from6to7+_00001.rule  from6to7+_00002.rule  from6to7+_00003.rule  from6to7+_00004.rule  from6to7+_00005.rule  from6to7+_00006.rule  from6to7+_00007.rule  from6to7+_00008.rule  from6to7+_00009.rule  from6to7+_00010.rule  from6to7+_00011.rule  from6to7+_00012.rule  from6to7+_00013.rule  from6to7+_00014.rule  from6to7+_00015.rule  from6to7+_00016.rule  from6to7+_00017.rule  from6to7+_00018.rule  from6to7+_00019.rule  from6to7+_00020.rule  from6to7+_00021.rule  from6to7+_00022.rule  from6to7+_00023.rule  from6to7+_00024.rule  from6to7+_00025.rule  (+863 more)
proj_wheel/: 10_0.wheel  10_1.wheel  10_10.wheel  10_100.wheel  10_1000.wheel  10_1001.wheel  10_1002.wheel  10_1003.wheel  10_1004.wheel  10_1005.wheel  10_1006.wheel  10_1007.wheel  10_1008.wheel  10_1009.wheel  10_101.wheel  10_1010.wheel  10_1011.wheel  10_1012.wheel  10_1013.wheel  10_1014.wheel  (+20768 more)
